// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SunClockCircle at 2:02 pm with long daylight hours 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-1236663591"
  >
    <path
      className="jsx-1236663591"
      d="M 469.91398874134404 456.15272748123516 A 230.76923076923077 230.76923076923077 0 1 0 127.82173906842755 453.6524790961794"
    />
  </g>
  <g
    className="jsx-1939279206"
  >
    <path
      className="jsx-1939279206"
      d="M 134.6878416265959 461.01654624214575 A 230.76923076923077 230.76923076923077 0 0 0 462.9409819657618 463.4156487789825"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={300}
    x2={392.24672401943866}
    y1={300}
    y2={143.42217783833937}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={53.07692307692308}
    x={394.53873876729426}
    xmlns="http://www.w3.org/2000/svg"
    y={-186.69576318128435}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 3:02 am with long nighttime hours 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-1236663591"
  >
    <path
      className="jsx-1236663591"
      d="M 522.9925942013953 240.59679468955946 A 230.76923076923077 230.76923076923077 0 0 0 165.18677428450803 112.70389207993054"
    />
  </g>
  <g
    className="jsx-1939279206"
  >
    <path
      className="jsx-1939279206"
      d="M 157.1453451198389 118.76262678770541 A 230.76923076923077 230.76923076923077 0 1 0 525.3714860860075 250.38013372441426"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={300}
    x2={170.37118446295077}
    y1={300}
    y2={427.367353225498}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={53.07692307692308}
    x={115.60948903913813}
    xmlns="http://www.w3.org/2000/svg"
    y={170.2638858768579}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 4:35 pm with setting sun 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-1236663591"
  >
    <path
      className="jsx-1236663591"
      d="M 515.3090502394108 216.95512806424864 A 230.76923076923077 230.76923076923077 0 1 0 142.6034898920493 468.7624853919267"
    />
  </g>
  <g
    className="jsx-1939279206"
  >
    <path
      className="jsx-1939279206"
      d="M 150.11461271650828 475.4674002448893 A 230.76923076923077 230.76923076923077 0 0 0 518.7264901698326 226.42581724674992"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={300}
    x2={469.379296487144}
    y1={300}
    y2={234.1461739401022}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={53.07692307692308}
    x={491.50540129812384}
    xmlns="http://www.w3.org/2000/svg"
    y={-72.64273951049677}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 7:02 am with rising sun 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-1236663591"
  >
    <path
      className="jsx-1236663591"
      d="M 473.9213066964693 148.32331442566675 A 230.76923076923077 230.76923076923077 0 0 0 77.09838418088367 240.25631803236803"
    />
  </g>
  <g
    className="jsx-1939279206"
  >
    <path
      className="jsx-1939279206"
      d="M 74.70455432181174 250.0360127042586 A 230.76923076923077 230.76923076923077 0 1 0 480.3718162526576 156.05401786941044"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={300}
    x2={124.88222872540831}
    y1={300}
    y2={251.4218292951773}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={53.07692307692308}
    x={58.42337325479902}
    xmlns="http://www.w3.org/2000/svg"
    y={-50.92477277840237}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      stroke="black"
      strokeWidth={4}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
</svg>
`;
